# rixel

./: Cargo.toml
src/: layout.rs  main.rs
src/ui/: mod.rs
